# pdf-downloader-multithreading

./: ..gitignore.swp  .gitignore  README.md  config.py  download_files.py  exploration.ipynb  plots.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
benchmarks/: benchmarks_pandas_vectorization.json  benchmarks_sequential.json  benchmarks_vectorization_varying_params.json
docs/: PDF Downloader.pptx  Testrapport.docx  kravspecifikation.docx  sequence_diagram.md  sequence_diagram.mermaid
logs/: benchmarks_iterrows.json  log.json  status.json  status.txt
tests/: test_downloads.py  test_integration.py
