[project]
name = "pdf-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
